# ideal-pancake

./: .env.example  .gitignore  Makefile  README.md  WIX_GUIDE.md  index.html  platformio.ini  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: auto_build_upload.py
src/: main.cpp
src/etl/: download_dataset.py
