[tool.poetry]
name = "ecommerce_pipeline"
version = "0.1.0"
description = "A pipeline for processing e-commerce data."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
pandas = "^1.2.0"
numpy = "^1.19.0"
requests = "^2.25.0"
streamlit = "^0.87.0"
sqlalchemy = "^1.3.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"